// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tour demos > demo: Basic 1`] = `
"<button class="ant-btn ant-btn-solid ant-btn-md" type="button">
  <!--v-if-->
  <!--v-if--><span class="ant-btn-content">Begin Tour</span>
</button>
<div class="ant-divider ant-divider-horizontal" role="separator" aria-orientation="horizontal">
  <!--v-if-->
</div>
<div class="ant-space ant-space-horizontal ant-space-align-center" style="column-gap: 8px; row-gap: 8px;"><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
    <!--v-if-->
    <!--v-if--><span class="ant-btn-content">Upload</span>
  </button><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
    <!--v-if-->
    <!--v-if--><span class="ant-btn-content">Save</span>
  </button><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
    <!--v-if-->
    <!--v-if--><span class="ant-btn-content"><span role="img" aria-label="ellipsis" class="anticon anticon-ellipsis"><svg focusable="false" class="" data-icon="ellipsis" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"></path></svg></span></span>
  </button></div>
<!--teleport start-->
<!--teleport end-->"
`;

exports[`Tour demos > demo: Mask 1`] = `
"<button class="ant-btn ant-btn-solid ant-btn-md" type="button">
  <!--v-if-->
  <!--v-if--><span class="ant-btn-content">Begin Tour</span>
</button>
<div class="ant-divider ant-divider-horizontal" role="separator" aria-orientation="horizontal">
  <!--v-if-->
</div>
<div class="ant-space ant-space-horizontal ant-space-align-center" style="column-gap: 8px; row-gap: 8px;"><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
    <!--v-if-->
    <!--v-if--><span class="ant-btn-content">Upload</span>
  </button><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
    <!--v-if-->
    <!--v-if--><span class="ant-btn-content">Save</span>
  </button><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
    <!--v-if-->
    <!--v-if--><span class="ant-btn-content"><span role="img" aria-label="ellipsis" class="anticon anticon-ellipsis"><svg focusable="false" class="" data-icon="ellipsis" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"></path></svg></span></span>
  </button></div>
<!--teleport start-->
<!--teleport end-->"
`;

exports[`Tour demos > demo: Placement 1`] = `
"<button class="ant-btn ant-btn-solid ant-btn-md" type="button">
  <!--v-if-->
  <!--v-if--><span class="ant-btn-content">Begin Tour</span>
</button>
<!--teleport start-->
<!--teleport end-->"
`;
